<resources>
    <string name="app_name">GreenGuard</string>
    <string name="back_button">Kembali</string>
    <string name="help_icon">Ikon Bantuan</string>
    <string name="info_icon">Ikon Informasi</string>
    <string name="tips_icon">Ikon Tips</string>
    <string name="disease_image">Gambar Penyakit</string>
    <string name="delBtnDesc">Hapus Riwayat</string>
    <string name="empty_history">There is no history yet</string>
    <string name="empty_info">There is no information found</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="analyze">Analyze</string>
    <string name="topText">Choose where you want to take
 the picture from! </string>
    <string name="home">Home</string>
    <string name="scan">Scan</string>
    <string name="history">History</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>